--- a/src/app/views/pages/dashboard/dashboard.component.html
+++ b/src/app/views/pages/dashboard/dashboard.component.html
@@ -1,7 +1,7 @@
 <div class="d-flex justify-content-between align-items-center flex-wrap grid-margin">
   <div>
     <h4 class="mb-3 mb-md-0">
-      <i data-feather="heart" appFeatherIcon class="icon-md me-2" style="color: #E97C9E;"></i>
+      <i data-feather="heart" appFeatherIcon class="icon-md me-2" style="color: #E57A84;"></i>
       Bienvenido a Bodas Planner
     </h4>
   </div>
