--- a/src/app/views/pages/mi-vitrina/redes-sociales/redes-sociales.component.html
+++ b/src/app/views/pages/mi-vitrina/redes-sociales/redes-sociales.component.html
@@ -135,7 +135,7 @@
                 type="text" 
                 class="form-control" 
                 [(ngModel)]="nuevaRed.color"
-                placeholder="#E97C9E"
+                placeholder="#E57A84"
               >
               <input 
                 type="color" 
