--- a/src/styles/_navbar.scss
+++ b/src/styles/_navbar.scss
@@ -4,7 +4,7 @@
   width: calc(100% - #{$sidebar-width-lg});
   height: $navbar-height;
   background: linear-gradient(180deg, #FFFFFF 0%, #FFF8FA 100%);
-  border-bottom: 1px solid #FFE5EC;
+  border-bottom: 1px solid #F4E6E1;
   display: flex;
   align-items: center;
   padding: 0;
