--- a/src/styles/components/_badges.scss
+++ b/src/styles/components/_badges.scss
@@ -13,7 +13,7 @@ a.badge { // for link badges
   padding: 0.35rem 0.75rem;
   
   &.bg-primary {
-    background-color: #E97C9E !important;
+    background-color: #E57A84 !important;
     color: white;
   }
   
@@ -23,12 +23,12 @@ a.badge { // for link badges
   }
   
   &.bg-info {
-    background-color: #F8B4D9 !important;
+    background-color: #E8C39E !important;
     color: white;
   }
   
   &.bg-warning {
-    background-color: #FFCBA4 !important;
+    background-color: #E8C39E !important;
     color: #704214;
   }
   
