--- a/src/app/views/layout/navbar/navbar.component.html
+++ b/src/app/views/layout/navbar/navbar.component.html
@@ -9,11 +9,11 @@
     <ul class="navbar-nav">
       <li class="nav-item" ngbDropdown>
         <a class="nav-link" ngbDropdownToggle id="languageDropdown" role="button">
-          <img src="images/flags/es.svg" class="w-20px" title="es" alt="es">
+          <img src="images/flags/pe.svg" class="w-20px" title="pe" alt="pe">
           <span class="ms-2 d-none d-md-inline-block">Español</span>
         </a>
         <div ngbDropdownMenu aria-labelledby="languageDropdown">
-          <a ngbDropdownItem class="py-2 d-flex"> <img src="images/flags/es.svg" class="w-20px me-1" title="es" alt="es"> <span class="ms-2"> Español </span></a>
+          <a ngbDropdownItem class="py-2 d-flex"> <img src="images/flags/pe.svg" class="w-20px me-1" title="pe" alt="pe"> <span class="ms-2"> Español </span></a>
           <a ngbDropdownItem class="py-2 d-flex"> <img src="images/flags/us.svg" class="w-20px me-1" title="us" alt="us"> <span class="ms-2"> English </span></a>
           <a ngbDropdownItem class="py-2 d-flex"> <img src="images/flags/fr.svg" class="w-20px me-1" title="fr" alt="fr"> <span class="ms-2"> French </span></a>
           <a ngbDropdownItem class="py-2 d-flex"> <img src="images/flags/de.svg" class="w-20px me-1" title="de" alt="de"> <span class="ms-2"> German </span></a>
@@ -105,8 +105,8 @@
         </a>
         <div ngbDropdownMenu class="px-0" aria-labelledby="notificationDropdown">
           <div class="px-3 py-2 d-flex align-items-center justify-content-between border-bottom">
-            <p>6 New Notifications</p>
-            <a href="" (click)="false" class="text-secondary">Clear all</a>
+            <p>6 Notificaciones Nuevas</p>
+            <a href="" (click)="false" class="text-secondary">Limpiar todo</a>
           </div>
           <div class="p-1">
             <a href="" (click)="false" class="dropdown-item d-flex align-items-center py-2">
@@ -114,8 +114,8 @@
                 <i class="feather icon-gift icon-sm text-white"></i>
               </div>
               <div class="flex-grow-1 me-2">
-                <p>New Order Recieved</p>
-                <p class="fs-12px text-secondary">30 min ago</p>
+                <p>Nueva Solicitud Recibida</p>
+                <p class="fs-12px text-secondary">hace 30 min</p>
               </div>	
             </a>
             <a href="" (click)="false" class="dropdown-item d-flex align-items-center py-2">
@@ -123,8 +123,8 @@
                 <i class="feather icon-alert-circle icon-sm text-white"></i>
               </div>
               <div class="flex-grow-1 me-2">
-                <p>Server Limit Reached!</p>
-                <p class="fs-12px text-secondary">1 hrs ago</p>
+                <p>Límite del Servidor Alcanzado</p>
+                <p class="fs-12px text-secondary">hace 1 hora</p>
               </div>	
             </a>
             <a href="" (click)="false" class="dropdown-item d-flex align-items-center py-2">
@@ -132,8 +132,8 @@
                 <img class="w-30px h-30px rounded-circle" src="https://placehold.co/30x30" alt="userr">
               </div>
               <div class="flex-grow-1 me-2">
-                <p>New customer registered</p>
-                <p class="fs-12px text-secondary">2 sec ago</p>
+                <p>Nueva pareja registrada</p>
+                <p class="fs-12px text-secondary">hace 2 seg</p>
               </div>	
             </a>
             <a href="" (click)="false" class="dropdown-item d-flex align-items-center py-2">
@@ -141,8 +141,8 @@
                 <i class="feather icon-layers icon-sm text-white"></i>
               </div>
               <div class="flex-grow-1 me-2">
-                <p>Apps are ready for update</p>
-                <p class="fs-12px text-secondary">5 hrs ago</p>
+                <p>Actualización disponible</p>
+                <p class="fs-12px text-secondary">hace 5 horas</p>
               </div>	
             </a>
             <a href="" (click)="false" class="dropdown-item d-flex align-items-center py-2">
@@ -150,13 +150,13 @@
                 <i class="feather icon-download icon-sm text-white"></i>
               </div>
               <div class="flex-grow-1 me-2">
-                <p>Download completed</p>
-                <p class="fs-12px text-secondary">6 hrs ago</p>
+                <p>Descarga completada</p>
+                <p class="fs-12px text-secondary">hace 6 horas</p>
               </div>	
             </a>
           </div>
           <div class="px-3 py-2 d-flex align-items-center justify-content-center border-top">
-            <a href="" (click)="false">View all</a>
+            <a href="" (click)="false">Ver todas</a>
           </div>
         </div>
       </li>
