--- a/src/app/views/pages/notificaciones/notificaciones.component.scss
+++ b/src/app/views/pages/notificaciones/notificaciones.component.scss
@@ -11,7 +11,7 @@
     font-weight: 600;
 
     i {
-      color: #E97C9E;
+      color: #E57A84;
       font-size: 1.75rem;
     }
   }
@@ -32,7 +32,7 @@
 
     i {
       font-size: 2.5rem;
-      color: #E97C9E;
+      color: #E57A84;
     }
   }
 
@@ -117,8 +117,8 @@
         }
 
         input[type="checkbox"]:checked ~ .checkmark {
-          background: linear-gradient(135deg, #E97C9E 0%, #d65d84 100%);
-          border-color: #E97C9E;
+          background: linear-gradient(135deg, #E57A84 0%, #d65d84 100%);
+          border-color: #E57A84;
         }
 
         input[type="checkbox"]:checked ~ .checkmark::after {
@@ -169,7 +169,7 @@
     }
 
     .btn-primary {
-      background: linear-gradient(135deg, #E97C9E 0%, #d65d84 100%);
+      background: linear-gradient(135deg, #E57A84 0%, #d65d84 100%);
       color: #fff;
 
       &:hover {
