--- a/src/app/views/pages/soporte/soporte-contacto/soporte-contacto.component.html
+++ b/src/app/views/pages/soporte/soporte-contacto/soporte-contacto.component.html
@@ -1,7 +1,7 @@
 <div class="page-header">
   <h3>
     <i class="feather icon-mail"></i>
-    Formulario de Contacto
+    Contáctanos
   </h3>
 </div>
 
